# harmonic-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: SWOT_HA.ipynb  SWOT_HA_Wendian.py  SWOT_HA_Wendian.slurm  SWOT_HA_WendianDiff.py  SWOT_HA_WendianDiff.slurm  ha.ipynb  ha_test.ipynb
notebooks/logs/: error.60823959  error.60824297  error.60826119  error.60828721  error.60828824  error.60855436  error.60855437  output.60823959  output.60824297  output.60826119  output.60827620  output.60828721  output.60828824  output.60852824  output.60855436  output.60855437
src/Tides/: Tides.py
src/util/: coordinate_transforms.py
