[project]
name = "harmonic-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pyproj>=3.7.1",
    "ruff>=0.11.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]